Data e hora nas fotos, fonte do titulo, organizacao dos arquivos

--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="../lib/power-polygon/ppw.js"></script>
 		<script type="text/javascript" src="../lib/power-polygon/_addons/syntaxhighlighter/sh.js"></script>
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/apresentacao.css" />
 	</head>
 	<body>
 		<section>
@@ -61,6 +61,6 @@ $(document).ready(function() {
 			<h2>The last slide</h2>
 			This is the last slide, thanks!
 		</section>
-		<script type="text/javascript" src="resources/js/main.js"></script>
+		<script type="text/javascript" src="js/apresentacao.js"></script>
 	</body>
 </html>
