--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Minicurso de jQuery</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title>Minicurso de jQuery</title>
+		<!-- TODO Configurar redes sociais e AddThis -->
+		<!-- Facebook -->
+		<meta property="og:url" content="http://minicursodejquery.sf.net/" />
+		<meta property="og:title" content="Minicurso de jQuery" />
+		<meta property="og:description" content="A Internet das páginas de conteúdo estático cedeu espaço a um ambiente dinâmico, com sites e sistemas ricos em design e funcionalidades. Para implementar sites interativos e atraentes, os desenvolvedores recorrem a bibliotecas como o jQuery para simplificar todas as tarefas das mais simples às mais complicadas, como por exemplo: modificar o design e conteúdo da página, acrescentar animações, prover interatividade com suporte a eventos, facilitar o uso do AJAX, etc. Além disso, o jQuery pode ser expandido através de plugins, utiliza uma sintaxe fácil de aprender e respeita os padrões da Internet, contribuindo para a correta exibição do site nos diversos navegadores existentes. Não sem motivo, o jQuery é a biblioteca JavaScript mais usada, presente em 55% dos 10 mil sites mais visitados do mundo. O objetivo deste minicurso é introduzir o desenvolvedor à utilização do jQuery. Serão apresentados os conceitos básicos para a utilização dessa biblioteca, assim como exemplos cotidianos do uso de suas rotinas e plugins. Espera-se que após o minicurso os desenvolvedores sejam capazes de utilizar a biblioteca eficientemente em seus projetos, assim como trilhar seus próprios caminhos na descoberta de mais funcionalidades e plugins." />
+		<meta property="og:image" content="imagens/miniatura_facebook.jpg"/>
+		<meta property="og:image:width" content="400" />
+		<meta property="og:image:height" content="400" />
+		<meta property="og:type" content="website"/>
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="imagens/icones/jquery.ico">
 		<!-- Scripts -->
 		<script type="text/javascript" src="../lib/jquery/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="../lib/power-polygon/ppw.js"></script>
@@ -12,7 +23,18 @@
 	</head>
 	<body>
 		<section>
-			<h1>Title of the first slide</h1>
+			<div id="central">
+				<h1>Desenvolvimento de sites para a web 2.0 com</h1>
+				<h2>http://minicursodejquery.sf.net</h2>
+			</div>
+			<div id="footer">
+				<div id="autor">
+					<p>Antônio Vinícius Menezes Medeiros</p>
+					<p>vinyanalista@gmail.com</p>
+				</div>
+				<span id="ufs"></span>
+				<span id="moobi"></span>
+			</div>
 		</section>
 		
 		<section class="jquery">
