Revisao do codigo-fonte

--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Minicurso de jQuery</title>
-		<!-- TODO Configurar redes sociais e AddThis -->
 		<!-- Facebook -->
 		<meta property="og:url" content="http://minicursodejquery.sf.net/" />
 		<meta property="og:title" content="Minicurso de jQuery" />
@@ -25,15 +24,15 @@
 		<section>
 			<div id="central">
 				<h1>Desenvolvimento de sites para a web 2.0 com</h1>
-				<h2>http://minicursodejquery.sf.net</h2>
+				<h2><a href="http://minicursodejquery.sf.net/" target="_blank">http://minicursodejquery.sf.net</a></h2>
 			</div>
 			<div id="footer">
 				<div id="autor">
 					<p>Antônio Vinícius Menezes Medeiros</p>
-					<p>vinyanalista@gmail.com</p>
+					<p><a href="mailto:vinyanalista@gmail.com" target="_blank">vinyanalista@gmail.com</a></p>
 				</div>
-				<span id="ufs"></span>
-				<span id="moobi"></span>
+				<a id="ufs" href="http://www.ufs.br/" target="_blank"></a>
+				<a id="moobi" href="http://moobitech.com.br/" target="_blank"></a>
 			</div>
 		</section>
 		
