--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="utf-8" />
 		<title>Minicurso de jQuery</title>
-		<!-- TODO Configurar redes sociais e AddThis -->
 		<!-- Facebook -->
 		<meta property="og:url" content="http://minicursodejquery.sf.net/" />
 		<meta property="og:title" content="Minicurso de jQuery" />
@@ -179,9 +178,6 @@
 						<strong>Hotsite em construção</strong>
 					</div>
 					<div class="grid-3-12">
-						<a href="agenda">Aplicação de exemplo</a>
-					</div>
-					<div class="grid-3-12">
 						<a href="apresentacao">Apresentação</a>
 					</div>
 					<div class="grid-2-12">
@@ -189,6 +185,9 @@
 					</div>
 					<div class="grid-2-12">
 						<a href="#">Instruções</a>
+					</div>
+					<div class="grid-3-12">
+						<a href="agenda">Aplicação de exemplo</a>
 					</div>
 				</div>
 			</div>
