Apresentacao - componentes utilizados

--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -52,25 +52,131 @@ $(document).ready(function() {
 });</pre>
 		</section>
 
-		<section class="ckeditor">
-			<h2>title os slide 3</h2>
-			Some content here, for slide 3
+		<section class="jquery-ui">
+			<h2>jQuery UI</h2>
+			<img class="center screenshot" src="imagens/screenshots/jqueryui.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> The jQuery Foundation</li>
+				<li><b>Versão:</b> 1.10.3</li>
+				<li><b>Página oficial:</b> <a href="http://jqueryui.com/" target="_blank">http://jqueryui.com/</a></li>
+			</ul>
+		</section>
+		<section class="tooltipster">
+			<h2>Tooltipster</h2>
+			<img class="center screenshot" src="imagens/screenshots/tooltipster.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Caleb Jacob</li>
+				<li><b>Versão:</b> 2.2.3</li>
+				<li><b>Página oficial:</b> <a href="http://calebjacob.com/tooltipster/" target="_blank">http://calebjacob.com/tooltipster/</a></li>
+			</ul>
 		</section>
 		<section class="datatables">
-			<h2>title os slide 3</h2>
-			Some content here, for slide 3
+			<h2>DataTables</h2>
+			<img class="center screenshot" src="imagens/screenshots/datatables.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> SpryMedia</li>
+				<li><b>Versão:</b> 1.9.4</li>
+				<li><b>Página oficial:</b> <a href="http://datatables.net/" target="_blank">http://datatables.net/</a></li>
+			</ul>
 		</section>
-		<section class="jquery-ui">
-			<h2>title os slide 3</h2>
-			Some content here, for slide 3
+		<section class="jquery-validate">
+			<h2>jQuery Validation Plugin</h2>
+			<img class="center screenshot" src="imagens/screenshots/jquery-validate.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Jörn Zaefferer</li>
+				<li><b>Versão:</b> 2.66</li>
+				<li><b>Página oficial:</b> <a href="http://jqueryvalidation.org/" target="_blank">http://jqueryvalidation.org/</a></li>
+			</ul>
+		</section>
+		<section class="jquery-mask">
+			<h2>jQuery Mask Plugin</h2>
+			<img class="center screenshot" src="imagens/screenshots/jquery-mask.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Igor Escobar</li>
+				<li><b>Versão:</b> 1.4.1</li>
+				<li><b>Página oficial:</b> <a href="http://igorescobar.github.io/jQuery-Mask-Plugin/" target="_blank">http://igorescobar.github.io/jQuery-Mask-Plugin/</a></li>
+			</ul>
+		</section>
+		<section class="jquery-timepicker">
+			<h2>jQuery Timepicker</h2>
+			<img class="center screenshot" src="imagens/screenshots/jquery-timepicker.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Jon Thornton</li>
+				<li><b>Versão:</b> 1.2.12</li>
+				<li><b>Página oficial:</b> <a href="http://jonthornton.github.io/jquery-timepicker/" target="_blank">http://jonthornton.github.io/jquery-timepicker/</a></li>
+			</ul>
+		</section>
+		<section class="notify">
+			<h2>Notify.js</h2>
+			<img class="center screenshot" src="imagens/screenshots/notify.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Jaime Pillora</li>
+				<li><b>Versão:</b> 0.3.1</li>
+				<li><b>Página oficial:</b> <a href="http://notifyjs.com/" target="_blank">http://notifyjs.com/</a></li>
+			</ul>
+		</section>
+		<section class="jcarousel">
+			<h2>jCarousel</h2>
+			<img class="center screenshot" src="imagens/screenshots/jcarousel.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Jan Sorgalla</li>
+				<li><b>Versão:</b> 0.3.0</li>
+				<li><b>Página oficial:</b> <a href="http://sorgalla.com/jcarousel/" target="_blank">http://sorgalla.com/jcarousel/</a></li>
+			</ul>
+		</section>
+		<section class="fancybox">
+			<h2>fancyBox</h2>
+			<img class="center screenshot" src="imagens/screenshots/fancybox.jpg" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Janis Skarnelis</li>
+				<li><b>Versão:</b> 2.1.5</li>
+				<li><b>Página oficial:</b> <a href="http://fancyapps.com/fancybox/" target="_blank">http://fancyapps.com/fancybox/</a></li>
+			</ul>
 		</section>
 		<section class="tag-it">
-			<h2>title os slide 3</h2>
-			Some content here, for slide 3
+			<h2>jQuery Tag-it!</h2>
+			<img class="center screenshot" src="imagens/screenshots/tag-it.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Levy Carneiro Jr., Alex Ehlke e outros</li>
+				<li><b>Versão:</b> 2.0</li>
+				<li><b>Página oficial:</b> <a href="http://aehlke.github.io/tag-it/" target="_blank">http://aehlke.github.io/tag-it/</a></li>
+			</ul>
+		</section>
+		<section class="ckeditor">
+			<h2>CKEditor</h2>
+			<img class="center screenshot" src="imagens/screenshots/ckeditor.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> CKSource</li>
+				<li><b>Versão:</b> 4.3</li>
+				<li><b>Página oficial:</b> <a href="http://ckeditor.com" target="_blank">http://ckeditor.com</a></li>
+			</ul>
 		</section>
 		<section class="uploadify">
-			<h2>title os slide 3</h2>
-			Some content here, for slide 3
+			<h2>Uploadify</h2>
+			<img class="center screenshot" src="imagens/screenshots/blockui.jpg" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Reactive Apps</li>
+				<li><b>Versão:</b> 3.2.1</li>
+				<li><b>Página oficial:</b> <a href="http://www.uploadify.com/" target="_blank">http://www.uploadify.com/</a></li>
+			</ul>
+		</section>
+		<section class="blockui">
+			<h2>jQuery BlockUI Plugin</h2>
+			<img class="center screenshot" src="imagens/screenshots/blockui.jpg" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Mike Alsup</li>
+				<li><b>Versão:</b> 2.66</li>
+				<li><b>Página oficial:</b> <a href="http://www.malsup.com/jquery/block/" target="_blank">http://www.malsup.com/jquery/block/</a></li>
+			</ul>
+		</section>
+		<section class="formee">
+			<h2>formee</h2>
+			<img class="center screenshot" src="imagens/screenshots/formee.png" />
+			<ul>
+				<li><b>Desenvolvedor:</b> Bernard De Luna, Daniel Araujo e Marcello Manso</li>
+				<li><b>Versão:</b> 3.1</li>
+				<li><b>Página oficial:</b> <a href="http://www.formee.org/" target="_blank">http://www.formee.org/</a></li>
+			</ul>
 		</section>
 
 		<section>
