--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 						<a href="https://github.com/vinyanalista/minicursodejquery/archive/master.zip">Download</a>
 					</div>
 					<div class="grid-2-12">
-						<a href="#">Instruções</a>
+						<a href="https://github.com/vinyanalista/minicursodejquery#desenvolvimento-de-sites-para-a-web-20-com-jquery">Instruções</a>
 					</div>
 					<div class="grid-3-12">
 						<a href="agenda">Aplicação de exemplo</a>
